force-app/main/default/objects/Related_List_Setting__mdt/Related_List_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Related List Setting</label>
    <pluralLabel>Related List Setting</pluralLabel>
</CustomObject>