force-app/main/default/objects/Related_List_Setting__mdt/fields/IsOrder__c.field-meta.xml
<CustomField>
    <fullName>IsOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOrder</label>
    <type>Checkbox</type>
</CustomField>