force-app/main/default/objects/Related_List_Setting__mdt/fields/LookUp_Field__c.field-meta.xml
<CustomField>
    <fullName>LookUp_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LookUp Field</label>
    <type>Checkbox</type>
</CustomField>