force-app/main/default/objects/Related_List_Setting__mdt/fields/Sort_ASC__c.field-meta.xml
<CustomField>
    <fullName>Sort_ASC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort ASC</label>
    <type>Checkbox</type>
</CustomField>